# model_explorer

./: LICENSE  README.md  requirements.txt
src/: pyproject.toml
src/model_explorer/: app.py  loader.py  main.py  tree.py  utils.py  visualizer.py
tests/: create_test_gguf.py  create_test_safetensors.py  test_app.py  test_model.gguf  test_model.safetensors  test_visualizer.py
