[project]
name = "model-explorer"
version = "0.1.0"
description = "Interactive explorer for SafeTensors and GGUF files. Ported from https://github.com/EricLBuehler/safetensors_explorer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dmitry Buzolin"},
]
dependencies = [
    "safetensors>=0.4.0",
    "gguf>=0.6.0",
    "textual>=0.40.0",
    "thefuzz>=0.19.0",
    "python-levenshtein>=0.12.0",  # Optional speedup for thefuzz
    "torch",
    "plotly>=5.0.0",
    "pandas>=1.0.0",
]

[project.scripts]
model-explorer = "model_explorer.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
